2009-09-30  Glenn Morris  <rgm@gnu.org>

	* cedet/semantic/bovine/gcc.el (semantic-gcc-setup): Replace runtime use
	of CL function `remove-if-not'.

	* emacs-lisp/authors.el (authors-ignored-files): Add "js2-mode.el".

2009-09-29  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (safe-local-eval-forms): Fix typo.

2009-09-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-dir-buffers): New var.
	(vc-state-refresh): New function.
	(vc-state): Use it.
	(vc-after-save): Always ask the backend to recompute the new state.
	Always call vc-dir if necessary, using vc-dir-buffers.
	* vc-dir.el (vc-dir-prepare-status-buffer, vc-dir-resynch-file):
	Use vc-dir-buffers.
	(vc-dir-mode): Use vc-dir-buffers rather than after-save-hook.
	(vc-dir-prepare-status-buffer, vc-dir-update)
	(vc-dir-resync-directory-files, vc-dir-resynch-file, vc-dir-mode):
	Don't call expand-file-name on default-directory.

2009-09-29  Juanma Barranquero  <lekktu@gmail.com>

	* speedbar.el (speedbar-item-delete):
	* calc/calc-prog.el (calc-kbd-if):
	* language/hanja-util.el (hanja-init-load): Fix typos in messages.

	* epa.el (epa-key-list-mode-map):
	* hi-lock.el (hi-lock-menu): Fix typos in menus.

	* progmodes/hideshow.el (hs-allow-nesting): Reflow docstring.
	(hs-show-hook): Fix typo in docstring.

2009-09-29  Glenn Morris  <rgm@gnu.org>

	* cedet/semantic/symref/idutils.el:
	* cedet/semantic/symref/list.el: Relicense under GPLv3+.

	* cedet/ede/srecode.el (srecode-resolve-arguments): Fix declaration.

	* cedet/semantic/complete.el (semantic-displayor-focus-abstract-child-p):
	* cedet/semantic/tag-file.el (semanticdb-table-child-p):
	* cedet/srecode/compile.el (srecode-template-inserter-newline-child-p):
	Mark declarations not understood by check-declare.

	* emacs-lisp/check-declare.el (check-declare-locate): Remove pointless
	file-name-nondirectory call preventing location of cedet files.
	(check-declare-verify): Use literal search rather than re-search.